# AoC2023

./: .gitignore
10_pipe_maze/: CMakeLists.txt  main.cpp
11_cosmic_expansion/: CMakeLists.txt  main.cpp
12_hot_springs/: CMakeLists.txt  main.cpp
13_point_of_incidence/: CMakeLists.txt  main.cpp  test.txt
14_parabolic_reflector_dish/: CMakeLists.txt  main.cpp
15_lens_library/: CMakeLists.txt  main.cpp
16_the_floor_will_be_lava/: CMakeLists.txt  main.cpp
17_clumsy_crucible/: CMakeLists.txt  main.cpp  out.txt
1_trebuchet/: CMakeLists.txt  main.cpp
2_cube_conundrum/: CMakeLists.txt  main.cpp
3_gear_ratios/: CMakeLists.txt  main.cpp  test2.txt
4_scratchcards/: CMakeLists.txt  benchmarks.txt  main.cpp
5_seeds/: CMakeLists.txt  main.cpp
6_wait_for_it/: CMakeLists.txt  main.cpp
7_camel_cards/: CMakeLists.txt  main.cpp
8_haunted_wasteland/: CMakeLists.txt  main.cpp
9_mirage_maintenance/: CMakeLists.txt  main.cpp
